# WhatsappMessageProcessor

./: .dockerignore  .gcloudignore  .gitignore  .replit  CUSTOMIZATION_GUIDE.md  Dockerfile  README.md  ai_config.py  app.py  config.py  database.py  database_session.py  deploy.ps1  extensions.py  knowledge_base.txt  main.py  models.py  pyproject.toml  replit.md  requirements.txt  setup_ngrok.py
instance/: whatsapp_ai.db
routes/: dashboard.py  tasks.py  webhook.py  webhook_async.py
services/: ai_service.py  cloud_storage.py  geolocation_service.py  knowledge_service.py  media_processor.py  whatsapp_service.py
static/css/: custom.css
static/js/: dashboard.js
templates/: base.html  conversation.html  conversations.html  dashboard.html
tests/: conftest.py  test_app.py  test_dashboard.py  test_tasks.py  test_webhook.py
